<resources>
    <string name="app_name">Mcd</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_mcd_main">mcdMain</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_citizen_form">CitizenForm</string>
    <string name="citizenFormTitle">Reporting Form</string>
    <string name="feedbackEmail">Email address</string>
    <string name="feedbackName">Name</string>
    <string name="feedbackType">Reporting Dept</string>
    <string name="feedbackType1">Garbage</string>
    <string name="feedbackType2">Water</string>
    <string name="feedbackType3">Health and Welfare</string>
    <string name="feedbackbody">Comments</string>
    <string name="feedbackbutton">Report Issue</string>
</resources>
