<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/citizenFormTitle"
            android:textSize="10pt">
        </TextView>
        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="70dp"
            android:hint="@string/feedbackName"
            android:inputType="textPersonName"
            android:layout_width="297dp">
        </EditText>


        <!--<EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="76dp"
            android:hint="@string/feedbackEmail"
            android:inputType="textEmailAddress"
            android:layout_width="299dp">
        </EditText>-->

        <Spinner
            android:id="@+id/SpinnerFeedbackType"
            android:layout_height="wrap_content"
            android:prompt="@string/feedbackType"
            android:layout_width="297dp"
            android:entries="@array/feedbackTypeList"
            android:spinnerMode="dropdown">
        </Spinner>
        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_height="179dp"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent">
        </EditText>

        <Button
            android:id="@+id/ButtonTakePicture"
            android:layout_height="wrap_content"
            android:text="Take Picture"
            android:onClick="clickPicture"
            android:layout_width="fill_parent">
        </Button>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/feedbackbutton"
            android:onClick="sendReport"
            android:layout_width="fill_parent">
        </Button>


    </LinearLayout>
</ScrollView>